toi uu query database

--- a/do_an/code/css/main.css
+++ b/do_an/code/css/main.css
@@ -622,3 +622,4 @@ h3 small {
 }
     /* Validate input before processing */
     /* Validate input before processing */
+    /* Ensure component is mounted before update */
