docs: add method documentation

--- a/do_an/code/view/livestream.html
+++ b/do_an/code/view/livestream.html
@@ -129,4 +129,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha256-NXRS8qVcmZ3dOv3LziwznUHPegFhPZ1F/4inU7uC8h0=" crossorigin="anonymous"></script>
 
 </body>
-</html>
+</html>    <!-- Handle async operation error -->
