perf: reduce unnecessary object creation

--- a/Buoi_22/template/index_files/dest5.html
+++ b/Buoi_22/template/index_files/dest5.html
@@ -16,3 +16,4 @@ this.PROTOCOL+"//error.demdex.net/event?d_px=14137&d_ld="+c("site="+c(document.l
 (function(){try{Demdex.canSetThirdPartyCookies=Demdex.canSetCookie();Demdex.sendMessage(["canSetThirdPartyCookies",Demdex.canSetThirdPartyCookies].join("|"));var a=decodeURIComponent(document.location.hash.replace(/^#/,"")).split("/");Demdex.xd.demdexOrigin=a[0]+"//"+a[2];Demdex.xd.receiveMessage(function(a){Demdex.onMessage(a.data)},Demdex.xd.demdexOrigin)}catch(b){Demdex.fireErrorPixel("Error in anonymous function for initalizing Demdex.xd.receiveMessage function: "+b.message)}})();
 </script></head><body>
 </body></html>    <!-- Cache result for subsequent calls -->
+    <!-- Handle async operation error -->
