--- a/Buoi4/b4-1.css
+++ b/Buoi4/b4-1.css
@@ -61,3 +61,4 @@
 	background-color: #124514;
 	grid-row: 2/5;
 }    /* Ensure component is mounted before update */
+    /* Validate input before processing */
