--- a/do_an/code/css/main.css
+++ b/do_an/code/css/main.css
@@ -5,6 +5,41 @@ body{
     box-sizing: border-box;    
     color: #fff;
 }
+.img{
+    max-width: 100%;
+}
+
+h2{
+    font-size: 30px;
+    line-height: 1.1;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.btn{
+    border-radius: 50px;
+    font-size: 14px;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: none;
+}
+
+.background{
+    background-image: url(../image/1a.jpg);
+    
+    
+}
+div.transbox{
+    background-color:black;
+    opacity: 0.9;
+   
+
+}
+div.transbox header{
+    z-index: 9999;
+}
 .grid{
     display: grid;
     grid-template-columns: repeat(12,1fr);
@@ -15,6 +50,9 @@ body{
     grid-template-columns:  repeat(10,1fr);
     gap:20px;
 
+}
+main{
+    padding-bottom: 40px;
 }
 .top-realease{
     margin-top: 50px;
@@ -80,7 +118,7 @@ h3 small{
     font-size: 12px;
     font-weight: 700;
     margin: auto 0;
-    margin-left: 20px;
+    margin-left: 30px;
     grid-column: 11/13;
 }
 .above-releases hr{
@@ -105,4 +143,229 @@ h3 small{
     color:#fff;
 }
 
+/* listen-to-chillhop-on */
+.listen-to-chillhop-on{
+    padding: 45px 0 45px 0;
+}
+.listen-to-chillhop-on h4{
+    font-size: 18px;
+    color: #999;
+    font-weight: 700;
+    overflow: hidden;
+    line-height: 1.1;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    position: relative;
+    margin: 0px;
+    min-height: 35px;
+    padding-bottom: 30px;
+}
+.item-logo{
+    grid-column: span 3;
+    padding-top: 10px;
+    margin: 0 auto;
+}
 
+/* carousel-news */
+
+.carousel-news{
+    height: 500px;
+    position: relative;
+}
+
+.info-news{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    text-align: center;
+}
+.carousel-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    opacity:0.3
+}
+.carousel-artists{
+    display: flex;
+    height: 300px;
+
+}
+.post-content{
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 25px;
+    word-wrap: break-word;
+    max-width: 600px;
+}
+.title-post{
+    font-weight: 700;
+    color: #fff;
+    max-width: 600px;
+}
+/* artists*/
+.artists-logo img{
+    width: 100%;
+    
+}
+.artists-logo{
+    position: relative;
+}
+.artists-logo img {
+    position: relative ;
+    width: 100%;
+    max-width: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 0.2rem;
+    height: 120px;
+    margin: 0 auto;
+}
+.carousel-artists{
+    color: black;
+    padding-bottom: 80px;
+    padding-top: 60px;
+}
+.artists-logo a h3{
+    color: black;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    
+}
+#artist{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.fa-plus-circle{
+    
+    
+    
+    color: green; 
+    border:3px solid #fff;
+    border-radius: 50%;
+    
+}
+.follow{
+    position: absolute;
+    left: 68%;
+    bottom: 18%;
+}
+/* playlist */
+.playlists{
+    padding-top:75px;
+    padding-bottom: 75px;
+}
+.above-playlists #playlists{
+   grid-column: 1/3;
+}
+.above-playlists .follow-btn{
+    grid-column: 11/12;
+    
+    
+}
+.above-playlists{
+    padding-bottom: 20px;
+}
+.follow-btn a{
+    font-size: 12px;
+}
+.above-playlists .see-all{
+    grid-column: 12/13;
+}
+.see-all a{
+    font-size: 12px;
+}
+.btn-success{
+    font-size: 14px;
+    border-radius: 50px;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+}
+.playlist a{
+    margin: 0 auto;
+}
+.name-playlist{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 16px;
+}
+.title-social{
+    font-size: 18px;
+}
+/* Lets get social */
+.social-item {
+    grid-column: span 2;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.title-social{
+    color: black;
+    font-size: 18;
+    font-weight: 700;
+}
+.social-item img{
+   width: 100%;
+   height: auto;
+   margin-top: auto;
+   margin-bottom: auto;
+}
+#vk-logo{
+    width: 40px;
+}
+#reddit-logo img{
+    height: 100%;
+   max-height: 40px !important;
+}
+.lets-get-social {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+/* youtube stream*/
+.youtube-stream{
+    background-image: url(../image/youtube-section/stream_preview.jpeg);
+    padding-top:75px ;
+    padding-bottom: 75px;
+}
+.youtube{
+    grid-column: 1/4;
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+.youtube img{
+    width: 190px;
+    margin-bottom: 30px;
+}
+.youtube p{
+    font-size: 16px;
+    font-weight: 400;
+}
+.youtube-stream-above .follow-btn{
+    grid-column: 11/12;
+}
+.youtube-stream-above .see-all{
+    grid-column: 12/13;
+}
+.big-button{
+    width: 400px;
+    margin: 0 auto;
+    border: 3px solid #fff;
+    border-radius: 50px;
+   
+}
+.see-all a{ 
+    color: #fff;
+}
+.big-button a{
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    color:#fff;
+}
