--- a/Buoi6/b6.css
+++ b/Buoi6/b6.css
@@ -15,20 +15,20 @@
 }
 .wrapper {
     width:100%;
-    box-shadow:0px 1px 3px rgba(0,0,0,0.2); 
-    background:#3e3436;
+    box-shadow:0px 1px 3px rgba(201, 37, 37, 0.2); 
+    background:#d3cdce;
 }
  
 /*----- Phần menu -----*/
 .menu {
     width:1000px;
-    margin:0px auto;
+    margin : 0px auto;
     background:#bf5c71;
     height: 50px;
-    margin-top: 150px;
+   
 }
 .menu li {
-    margin:0px;
+    
     list-style:none;
     font-family:'Ek Mukta';
 }
@@ -53,7 +53,7 @@
     font-size:19px;
 }
 .menu > ul > li > a {
-    padding:10px 40px;
+    padding: 10px 40px;
     display:inline-block;
     color:white;
 }
@@ -82,9 +82,14 @@
     font-size:16px;
 }
 .sub-menu li a {
-    padding:10px 30px;
+    padding:10px 60px;
     display:block;
 }
 .sub-menu li a:hover, .sub-menu .current-item a {
     background:#3e3436;
+}
+
+.clearfix li {
+    margin: 0px;
+    padding: 0px;
 }
