update do an trang 2

--- a/do_an/code/view/releases.html
+++ b/do_an/code/view/releases.html
@@ -225,6 +225,40 @@
        
         
     </main>
+    <footer class="container-fruid">
+        <div class="container grid">
+            <div class="menu-footer">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">RELEASES</a></li>
+                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">LIVESTREAM</a></li>
+                    <li><a href="#">TUTORIALS</a></li>
+                </ul>
+            </div>
+            <div class="social-icon">
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-soundcloud"></i></a>
+                <a href="#"><i class="fab fa-itunes"></i></a>
+                <a href="#"><i class="fab fa-spotify"></i></a>
+                <a href="#"><i class="fab fa-discord"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></>
+
+            </div>
+            <div class="textwidget-left">
+                <a href="#"><i class="fas fa-comments"></i>  Talk to Us</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="textwidget-right">
+                © 2020 CHILLHOP MUSIC B.V.
+            </div>
+        </div>
+        
+    </footer>
         
 
     
