--- a/do_an/code/css/main.css
+++ b/do_an/code/css/main.css
@@ -575,6 +575,8 @@ h3 small {
   display: flex;
   justify-content: space-between;
   margin: auto 0;
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
 .sub-h2 h2 {
   font-size: 22px;
