--- a/Nashtech/FE/B1/css/style.css
+++ b/Nashtech/FE/B1/css/style.css
@@ -1,3 +1,10 @@
+a {
+    text-decoration: none;
+}
+
+
+/*header*/
+
 .post-title a:hover {
     text-decoration: none;
 }
@@ -10,9 +17,7 @@
     right: -100px;
 }
 
-.search {
-    position: relative;
-}
+.search {}
 
 .post-title a {
     color: black;
@@ -26,23 +31,13 @@
     margin-top: 150px;
 }
 
-a {
-    text-decoration: none;
-}
-
 .grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 10px;
 }
 
-div.overlay {
-    background-color: black;
-    opacity: 0.9;
-    z-index: -1;
-}
-
-.background {
+.background-header {
     background-image: url(../images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -59,6 +54,7 @@ div.overlay {
 }
 
 .navigation {
+    position: relative;
     grid-column: 7/13;
 }
 
@@ -66,9 +62,10 @@ div.overlay {
     float: right;
 }
 
-.menu li {
+.navbar-menu .menu li {
     margin: 30px 0px 0px 30px;
     font-weight: 600;
+    text-transform: uppercase;
 }
 
 .menu li a:hover {
@@ -81,8 +78,10 @@ div.overlay {
 }
 
 .search {
+    position: absolute;
     margin-top: 15px;
-    float: right;
+    right: 0;
+    top: 70px;
 }
 
 .search .fa-search {
@@ -114,6 +113,9 @@ div.overlay {
     text-align: center;
 }
 
+
+/*main*/
+
 .all-post {
     width: 50%;
     margin-left: auto;
@@ -142,6 +144,9 @@ div.overlay {
     margin-top: 40px;
     margin-left: 20px;
 }
+
+
+/*footer*/
 
 footer .social {
     padding-top: 150px;
